{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 628,
  "lineage": "ca15ee04-d51a-fdb0-3917-2cf2a6c1b811",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jhlee_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.0.11",
            "association_id": "eipassoc-0a62465d01cab3f85",
            "domain": "vpc",
            "id": "eipalloc-0e0103882c106a4db",
            "instance": "i-0ee340dc9a108fe99",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f7ad9148086d3669",
            "private_dns": "ip-192-168-0-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-52-79-223-125.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.223.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jhlee_web_a1",
            "aws_internet_gateway.jhlee_ig",
            "aws_security_group.jhlee_allow_http",
            "aws_subnet.jhlee_puba",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jhlee_eip1_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03833ac0df663b6e7",
            "domain": "vpc",
            "id": "eipalloc-0aa234a8d075e34f1",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03edab17a465ad1ef",
            "private_dns": "ip-192-168-0-110.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.110",
            "public_dns": "ec2-13-209-241-68.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.241.68",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jhlee_eip1_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07379af587e625e86",
            "domain": "vpc",
            "id": "eipalloc-020813e79907fb0a3",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cd40a6738f6dbafe",
            "private_dns": "ip-192-168-2-172.ap-northeast-2.compute.internal",
            "private_ip": "192.168.2.172",
            "public_dns": "ec2-3-35-99-147.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.99.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jhlee_web_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:instance/i-0ee340dc9a108fe99",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee340dc9a108fe99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair-cli",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7ad9148086d3669",
            "private_dns": "ip-192-168-0-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.11",
            "public_ip": "52.79.223.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0229c7c9944e3bf2a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9788662cde16ef0",
            "tags": {
              "Name": "web-a1"
            },
            "tags_all": {
              "Name": "web-a1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028402d59a76bd4db"
            ]
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc",
            "aws_security_group.jhlee_allow_http",
            "aws_subnet.jhlee_puba"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jhlee_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:internet-gateway/igw-02503d6fce1d40e31",
            "id": "igw-02503d6fce1d40e31",
            "owner_id": "164134553042",
            "tags": {
              "Name": "jhlee-ig"
            },
            "tags_all": {
              "Name": "jhlee-ig"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jhlee_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:loadbalancer/app/jhlee-lb/1c54ca0b2e856abb",
            "arn_suffix": "app/jhlee-lb/1c54ca0b2e856abb",
            "dns_name": "jhlee-lb-1081811129.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:loadbalancer/app/jhlee-lb/1c54ca0b2e856abb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jhlee-lb",
            "security_groups": [
              "sg-028402d59a76bd4db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c43b8e6891efaa0"
              },
              {
                "subnet_id": "subnet-0b9788662cde16ef0"
              }
            ],
            "subnets": [
              "subnet-02c43b8e6891efaa0",
              "subnet-0b9788662cde16ef0"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jhlee_allow_http",
            "aws_subnet.jhlee_puba",
            "aws_subnet.jhlee_pubc",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jhlee_lb_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:listener/app/jhlee-lb/1c54ca0b2e856abb/916e4aae1f952b7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:targetgroup/jhlee-lb-tg/e8daf8ac88cd007a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:listener/app/jhlee-lb/1c54ca0b2e856abb/916e4aae1f952b7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:loadbalancer/app/jhlee-lb/1c54ca0b2e856abb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jhlee_allow_http",
            "aws_subnet.jhlee_puba",
            "aws_subnet.jhlee_pubc",
            "aws_vpc.jhlee_vpc",
            "aws_lb.jhlee_lb",
            "aws_lb_target_group.jhlee_lb_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jhlee_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:targetgroup/jhlee-lb-tg/e8daf8ac88cd007a",
            "arn_suffix": "targetgroup/jhlee-lb-tg/e8daf8ac88cd007a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:targetgroup/jhlee-lb-tg/e8daf8ac88cd007a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jhlee-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jhlee_lb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:targetgroup/jhlee-lb-tg/e8daf8ac88cd007a-20211018142337795200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:164134553042:targetgroup/jhlee-lb-tg/e8daf8ac88cd007a",
            "target_id": "192.168.0.11"
          },
          "dependencies": [
            "aws_lb_target_group.jhlee_lb_tg",
            "aws_vpc.jhlee_vpc",
            "data.aws_instances.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jhlee_ngw_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa234a8d075e34f1",
            "connectivity_type": "public",
            "id": "nat-014f4b55a04956d04",
            "network_interface_id": "eni-03edab17a465ad1ef",
            "private_ip": "192.168.0.110",
            "public_ip": "13.209.241.68",
            "subnet_id": "subnet-0b9788662cde16ef0",
            "tags": {
              "Name": "jhlee-ngw-pria"
            },
            "tags_all": {
              "Name": "jhlee-ngw-pria"
            }
          },
          "dependencies": [
            "aws_eip.jhlee_eip1_pria",
            "aws_subnet.jhlee_puba",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jhlee_ngw_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020813e79907fb0a3",
            "connectivity_type": "public",
            "id": "nat-00108fe4f43006356",
            "network_interface_id": "eni-0cd40a6738f6dbafe",
            "private_ip": "192.168.2.172",
            "public_ip": "3.35.99.147",
            "subnet_id": "subnet-02c43b8e6891efaa0",
            "tags": {
              "Name": "jhlee-ngw-pric"
            },
            "tags_all": {
              "Name": "jhlee-ngw-pric"
            }
          },
          "dependencies": [
            "aws_eip.jhlee_eip1_pric",
            "aws_subnet.jhlee_pubc",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhlee_natrt_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:route-table/rtb-0e1d949294ef4e40b",
            "id": "rtb-0e1d949294ef4e40b",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014f4b55a04956d04",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhlee-natrt-pria"
            },
            "tags_all": {
              "Name": "jhlee-natrt-pria"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jhlee_ngw_pria",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhlee_natrt_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:route-table/rtb-0ceaf7b8cb648cd2f",
            "id": "rtb-0ceaf7b8cb648cd2f",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00108fe4f43006356",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhlee-natrt-pric"
            },
            "tags_all": {
              "Name": "jhlee-natrt-pric"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jhlee_ngw_pric",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhlee_routingtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:route-table/rtb-0506704c0f069a26b",
            "id": "rtb-0506704c0f069a26b",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02503d6fce1d40e31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhlee-public-routingtable"
            },
            "tags_all": {
              "Name": "jhlee-public-routingtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jhlee_ig",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_pria_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0446654a447e31057",
            "route_table_id": "rtb-0e1d949294ef4e40b",
            "subnet_id": "subnet-02cdae06f51e8c7c2"
          },
          "dependencies": [
            "aws_eip.jhlee_eip1_pria",
            "aws_nat_gateway.jhlee_ngw_pria",
            "aws_route_table.jhlee_natrt_pria",
            "aws_subnet.jhlee_pria",
            "aws_subnet.jhlee_puba",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_pric_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd36044e4049b86",
            "route_table_id": "rtb-0ceaf7b8cb648cd2f",
            "subnet_id": "subnet-0b74e4bfa3c19d54f"
          },
          "dependencies": [
            "aws_subnet.jhlee_pubc",
            "aws_vpc.jhlee_vpc",
            "aws_eip.jhlee_eip1_pric",
            "aws_nat_gateway.jhlee_ngw_pric",
            "aws_route_table.jhlee_natrt_pric",
            "aws_subnet.jhlee_pric"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_puba_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb926f8f9d7ef96b",
            "route_table_id": "rtb-0506704c0f069a26b",
            "subnet_id": "subnet-0b9788662cde16ef0"
          },
          "dependencies": [
            "aws_route_table.jhlee_routingtable",
            "aws_subnet.jhlee_puba",
            "aws_vpc.jhlee_vpc",
            "aws_internet_gateway.jhlee_ig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_pubc_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e308ef6785a44303",
            "route_table_id": "rtb-0506704c0f069a26b",
            "subnet_id": "subnet-02c43b8e6891efaa0"
          },
          "dependencies": [
            "aws_internet_gateway.jhlee_ig",
            "aws_route_table.jhlee_routingtable",
            "aws_subnet.jhlee_pubc",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jhlee_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:security-group/sg-028402d59a76bd4db",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028402d59a76bd4db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "164134553042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jhlee-allow-http-ssh"
            },
            "tags_all": {
              "Name": "jhlee-allow-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:subnet/subnet-02cdae06f51e8c7c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-02cdae06f51e8c7c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pri-a"
            },
            "tags_all": {
              "Name": "pri-a"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:subnet/subnet-0b74e4bfa3c19d54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0b74e4bfa3c19d54f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pri-c"
            },
            "tags_all": {
              "Name": "pri-c"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:subnet/subnet-0b9788662cde16ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0b9788662cde16ef0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:subnet/subnet-02c43b8e6891efaa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-02c43b8e6891efaa0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-02f86f0f02cf54e45"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jhlee_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:164134553042:vpc/vpc-02f86f0f02cf54e45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-094dadc4e4a9043e6",
            "default_route_table_id": "rtb-0efcb4cfa15bb6030",
            "default_security_group_id": "sg-0842dc464972d5621",
            "dhcp_options_id": "dopt-04597232ccea9824e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02f86f0f02cf54e45",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0efcb4cfa15bb6030",
            "owner_id": "164134553042",
            "tags": {
              "Name": "jhlee_vpc"
            },
            "tags_all": {
              "Name": "jhlee_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}